--- a/blogposts.html
+++ b/blogposts.html
@@ -16,7 +16,7 @@
             <a href="homepage.html">Home</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
-            <a href="posts.html">Posts</a>
+            <a href="blogposts.html">Posts</a>
         </div>
         
     <p></p>
