Update and rename Contact.html to contact.html

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
             <a href="homepage.html">Home</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
-            <a href="posts.html">Posts</a>
+            <a href="blogposts.html">Posts</a>
         </div>
 
         <div class="form">
